--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ header .container-fluid .row .nav-main ul {
 
 
 header .container-fluid .row .nav-main ul a {
-    color: #02146f;
+    color: #0b81c1;
     font-weight: bold;
     text-transform: uppercase;
     font-size: 18px;
